--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,9 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: CV
-    url: static/uploads/resume.pdf
-    weight: 11
   - name: Publications
     url: '#publications'
-    weight: 12
+    weight: 20
+  - name: CV
+    url: uploads/resume.pdf
+    weight: 30
